--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.mymusic">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -15,17 +16,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMusic"
         tools:targetApi="31">
-        <activity
-            android:name=".MusicPlayerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".SignInSignUp.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".SignInSignUp.Register"
+            android:exported="false"/>
+        <activity
+            android:name=".MusicPlayerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+
         </activity>
     </application>
 
